hphp/test/zend/good/Zend/tests/errmsg_037.php.expectf
Fatal error: Property may not be abstract. %s/errmsg_037.php on line 4
